--- a/#src/scss/ceo/result.scss
+++ b/#src/scss/ceo/result.scss
@@ -38,6 +38,15 @@
                     opacity: 1;
                     transition: all .0.5s ease;
                 }
+                & .ceo-result__block-number-media {
+                    color: #000;
+                    background-color: #fff;
+                    transition: all .0.5s ease;
+                }
+                & .ceo-result__block-add-media {
+                    opacity: 1;
+                    transition: all .0.5s ease;
+                }
             }
         }
         &-number {
@@ -59,6 +68,26 @@
             align-items: center;
             justify-content: center;
             transition: all .0.5s ease;
+            &-media {
+                border-left: 1px solid #fff;
+                border-top: 1px solid #fff;
+                border-right: 1px solid #fff;
+                width: 75px;
+                height: 75px;
+                background: transparent;
+                font-family: Circe;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 30px;
+                line-height: 47px;
+                letter-spacing: 0.12em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all .0.5s ease;
+            }
         }
         &-text {
             width: 286px;
@@ -71,6 +100,23 @@
             letter-spacing: 0.12em;
             text-transform: uppercase;
             color: #FFFFFF;
+            &-media {
+                width: 286px;
+                height: 47px;
+                font-family: Circe;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 23px;
+                line-height: 47px;
+                letter-spacing: 0.12em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
+        }
+        &-media {
+            display: none;
+            justify-content: flex-start;
+            align-items: center;
         }
         &-add {
             width: 466px;
