--- a/#src/scss/new/media.scss
+++ b/#src/scss/new/media.scss
@@ -331,6 +331,9 @@
     .n-header__info-item {
         width: 105%;
     }
+    .n-footer__add-sections a {
+        margin: 0 5px 0 0;
+    }
 }
 @media (max-width: 550px) {
     .n-header__info-item {
