--- a/#src/scss/mailing/about.scss
+++ b/#src/scss/mailing/about.scss
@@ -49,6 +49,27 @@
                 color: #9C9C9C;
             }
         }
+        &-img {
+            width: 516px;
+            height: 539px;
+            position: relative;
+            z-index: 10;
+            &::after {
+                content: "";
+                position: absolute;
+                top: 38px;
+                left: -24px;
+                z-index: -1;
+                width: 499px;
+                height: 527px;
+                border: 1px solid #DC4139;
+            }
+            & img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
         &-title {
             margin-top: 54px;
             height: 110px;
