--- a/#src/scss/rec/media.scss
+++ b/#src/scss/rec/media.scss
@@ -29,15 +29,726 @@
         height: 150px;
     }
 }
+@media (max-height: 600px) {
+    .rec-header__container {
+        top: 23%;
+    }
+}
+@media (max-height: 550px) {
+    .rec-header__info-btn-container {
+        margin-top: 45px;
+    }
+}
+@media (max-height: 510px) {
+    .rec-header__info-text {
+        margin-top: 23px;
+    }
+    .rec-header__info-title {
+        margin-top: 33px;
+    }
+}
+
+
+
+
 
 
 @media (max-width: 1505px) {
     .seo-team__block-img {
         overflow: hidden;
     }
+    .rec-skills {
+        overflow: hidden;
+    }
+    .rec-price__block-item:nth-child(2) .rec-price__block-price-media,
+    .rec-price__block-item:nth-child(2) .rec-price__block-add-media {
+        color: #fff;
+    }
 }
 @media (max-width: 1430px) {
     .seo-team__block-img {
         display: none;
+    }
+}
+@media (max-width: 1400px) {
+    .rec-new__text {
+        margin-left: 30px;
+    }
+    .rec-header__container {
+        width: 1040px;
+    }
+    .rec-header__info-title {
+        font-size: 55px;
+    }
+}
+@media (max-width: 1350px) {
+    .rec-new__text {
+        margin-left: 0;
+    }
+    .rec-skills__container {
+        padding: 0 0 0 90px;
+    }
+    .rec-header__container {
+        width: 990px;
+    }
+    .rec-work__block {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-work__text {
+        margin-bottom: 55px;
+    }
+    .rec-work__image {
+        width: 100%;
+        height: 100%;
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+        &::after {
+            width: 97%;
+            height: 96%;
+        }
+    }
+    .rec-start__block {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-start__list {
+        margin-top: 95px;
+        width: 100%;
+    }
+    .rec-start__list-item {
+        width: 100%;
+        justify-content: flex-start;
+    }
+    .rec-start__list-text {
+        width: 100%;
+    }
+}
+@media (max-width: 1300px) {
+    .rec-new__slide-container {
+        width: 650px;
+    }
+    .rec-header__container {
+        width: 940px;
+    }
+    .rec-header__info-title {
+        font-size: 52px;
+    }
+}
+@media (max-width: 1250px) {
+    .rec-new__slide-container {
+        width: 600px;
+    }
+    .rec-about__block {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-about__block-text {
+        height: 100%;
+        margin-bottom: 55px;
+    }
+    .rec-about__block-img {
+        width: 100%;
+        height: 100%;
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+        &::after {
+            left: -27px;
+            width: 98%;
+            height: 99%;
+        }
+    }
+    .rec-about__block {
+        padding: 0 180px;
+    }
+    .rec-skills__circle-add {
+        width: 380px;
+        height: 380px;
+    }
+    .rec-skills__block-title {
+        width: 100%;
+    }
+    .rec-skills__block-text {
+        width: 310px;
+    }
+    .rec-skills__container {
+        padding: 0;
+    }
+    .rec-header__container {
+        width: 890px;
+    }
+    .rec-skills__container {
+        width: 100%;
+    }
+}
+@media (max-width: 1200px) {
+    .rec-footer__info-sections {
+        margin: 38px 175px 0 0;
+    }
+    .rec-footer__add-phone {
+        margin-right: 60px;
+    }
+    .rec-new__slide-container {
+        width: 550px;
+    }
+    .rec-about__block-add::before {
+        width: 30%;
+    }
+    .rec-header__container {
+        width: 840px;
+    }
+}
+@media (max-width: 1150px) {
+    .rec-footer__info-sections {
+        margin: 38px 135px 0 0;
+    }
+    .rec-footer__add-phone {
+        margin-right: 20px;
+    }
+    .rec-new__slide-container {
+        width: 500px;
+    }
+    .rec-price .container {
+        padding: 0;
+    }
+    label.rec-skill__tab {
+        font-size: 14px;
+    }
+    .rec-company__search {
+        padding: 0 90px 100px 90px;
+    }
+    .rec-header__container {
+        width: 790px;
+    }
+}
+@media (max-width: 1100px) {
+    .rec-start__block {
+        padding: 0;
+    }
+    .rec-header__container {
+        width: 740px;
+    }
+    .rec-work__block {
+        padding: 0;
+    }
+    .rec-skills__block-container {
+        padding: 0 90px;
+    }
+    .rec-about__block {
+        padding: 0 90px;
+    }
+    .rec-new .container {
+        padding: 0;
+    }
+    .rec-footer__block {
+        padding: 65px 28px 30px 28px;
+        width: 100%;
+        height: 100%;
+    }
+}
+@media (max-width: 1050px) {
+    .rec-header__search {
+        display: none;
+    }
+    .rec-header {
+        padding: 0;
+        & .container {
+            padding: 0;
+        }
+    }
+    .rec-header__nav {
+        padding: 0 90px;
+        background-color: #000;
+        & rect {
+            fill: #000;
+        }
+    }
+    .rec-header__menu-geo {
+        opacity: 0;
+    }
+    .rec-header__menu-item::before {
+        border-top: 1px solid #fff;
+    }
+    .rec-header__menu-item::after {
+        border-top: 1px solid #fff;
+    }
+    .rec-header__container {
+        width: 100%;
+        top: 30%;
+        left: 0;
+        transform: translate(0%, 0%);
+        padding: 0 0 0 180px;
+    }
+}
+@media (max-width: 1000px) {
+    .rec-new__slide-container {
+        width: 450px;
+    }
+}
+@media (max-width: 950px) {
+    .rec-company__search {
+        padding: 0 28px 100px 28px;
+    }
+    .rec-price__block-list {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-price__block-item {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .rec-price__block-item:nth-child(1) {
+        border-left: none;
+        margin: 0;
+        width: 100%;
+        border-right: none;
+    }
+    .rec-price__block-item:nth-child(2) {
+        border-left: none;
+        margin: 0;
+        max-width: 100%;
+        border-right: none;
+    }
+    .rec-price__block-item:last-child {
+        margin: 0;
+        border-right: none;
+    }
+    .rec-price__block-price {
+        display: none;
+    }
+    .rec-price__block-add {
+        display: none;
+    }
+    .rec-price__block-media {
+        display: flex;
+    }
+    .rec-price__block-item:nth-child(2) {
+        transform: scale(1);
+    }
+    .rec-price__block-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .rec-price__block-text {
+        width: 400px;
+        text-align: left;
+        margin-top: 14px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .rec-price__block-key {
+        margin-top: 0;
+    }
+    .rec-price__block-price-media {
+        margin-top: 0;
+    }
+    .rec-price__block-item {
+        width: 100%;
+        height: 235px;
+    }
+    .rec-price__block-item:nth-child(2) {
+        padding: 5px;
+    }
+    .rec-price__block-item:nth-child(2) .rec-price__block-key {
+        margin-top: 0;
+    }
+    .rec-price__block-item:nth-child(1),
+    .rec-price__block-item:nth-child(3) {
+        padding: 18px;
+    }
+}
+@media (max-width: 900px) {
+    .rec-header__container {
+        padding: 0 0 0 90px;
+    }
+    .rec-price__text-title {
+        width: 80%;
+        text-align: center;
+    }
+    .rec-new__slide-container {
+        width: 400px;
+    }
+    .rec-skills__circle-add {
+        width: 300px;
+        height: 300px;
+    }
+    .rec-skills__circle {
+        margin-top: 220px;
+    }
+}
+@media (max-width: 850px) {
+    .rec-new .container {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-new__text {
+        margin-bottom: 75px;
+    }
+    .rec-new__text-controls .swiper-controls-rec {
+        position: absolute;
+        top: 470px;
+        left: 15px;
+        width: 200px;
+        height: 30px;
+        margin-left: auto;
+        padding: 30px 0 10px 0;
+        z-index: 0;
+    }
+    .rec-new {
+        position: relative;
+        padding: 210px 90px 175px 90px;
+    }
+    .rec-footer__info {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-footer__info-item {
+        &:nth-child(2) {
+            margin-top: 35px;
+        }
+        &:last-child {
+            display: none;
+        }
+    }
+    .rec-footer__add-phone {
+        display: none;
+    }
+    .rec-footer__add-sections a {
+        margin: 0 5px 0 0;
+    }
+    .rec-header__info-title {
+        font-size: 47px;
+        height: 169px;
+        line-height: 60px;
+    }
+    .rec-start__list-block {
+        margin-right: 30px;
+    }
+    .rec-start__list-block {
+        width: 55%;
+    }
+    .rec-skills__block-text {
+        width: 295px;
+        font-size: 15px;
+    }
+}
+@media (max-width: 800px) {
+    .rec-skills__circle {
+        display: none;
+    }
+    .rec-skills__block-text {
+        width: 100%;
+        font-size: 17px;
+    }
+    label.rec-skill__tab:nth-child(1) {
+        padding: 18px;
+    }
+    label.rec-skill__tab:nth-child(2) {
+        padding: 18px;
+    }
+    label.rec-skill__tab:nth-child(3) {
+        padding: 18px;
+    }
+    label.rec-skill__tab:nth-child(4) {
+        padding: 18px;
+    }
+    label.rec-skill__tab:nth-child(5) {
+        padding: 18px;
+    }
+    label.rec-skill__tab:nth-child(6) {
+        padding: 18px;
+    }
+}
+@media (max-width: 750px) {
+    .rec-skills__container {
+        display: none;
+        // ! ---------------
+    }
+    .rec-footer .container {
+        padding: 0 28px;
+    }
+    .rec-new {
+        padding: 210px 28px 175px 28px;
+    }
+    .rec-about__block {
+        padding: 0 28px;
+    }
+    .rec-about__block-img::after {
+        display: none;
+    }
+    .rec-skills__block-container {
+        padding: 0 28px;
+    }
+    .rec-work .container {
+        padding: 0 28px;
+    }
+    .rec-work__image::after {
+        display: none;
+    }
+    .rec-start .container {
+        padding: 0 28px;
+    }
+    .rec-header__container {
+        padding: 0 0 0 28px;
+    }
+    .rec-header__nav {
+        padding: 0 28px;
+    }
+    .rec-skills__media {
+        display: block;
+    }
+}
+@media (max-width: 700px) {
+    .rec-header__info-title {
+        font-size: 32px;
+        height: 90px;
+        line-height: 47px;
+    }
+    .rec-price__block-text {
+        font-size: 14px;
+        width: 305px;
+    }
+    .rec-price__block-price-media {
+        font-size: 25px;
+    }
+    .rec-price__block-add-media {
+        font-size: 18px;
+    }
+    .rec-work__text-add::before {
+        width: 55%;
+    }
+}
+@media (max-width: 600px) {
+    .rec-price__block-text {
+        font-size: 13px;
+        width: 222px;
+    }
+    .rec-price__text-title {
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 26px;
+    }
+    .rec-price__text-item {
+        width: 100%;
+        height: 72px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+    }
+    .rec-header__info-title {
+        font-size: 30px;
+        height: 105px;
+        line-height: 45px;
+    }
+}
+@media (max-width: 550px) {
+    .rec-start__list-circle {
+        margin-left: 25px;
+    }
+    .rec-header__info-title {
+        font-size: 26px;
+        height: 104px;
+        line-height: 38px;
+    }
+    .rec-start__text-add::before {
+        width: 100%;
+    }
+    .rec-footer .container {
+        padding: 0;
+    }
+}
+@media (max-width: 500px) {
+    .rec-start__list-circle {
+        display: none;
+    }
+    .rec-start__list-block {
+        width: 90%;
+    }
+    .rec-price__block-key {
+        height: 29px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+    }
+    .rec-price__block-price-media {
+        font-size: 20px;
+    }
+    .rec-price__block-add-media {
+        font-size: 14px;
+    }
+    .rec-start__text-item {
+        margin-top: 48px;
+        width: 350px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        color: #535353;
+    }
+    .rec-work__text-item {
+        width: 360px;
+    }
+}
+@media (max-width: 450px) {
+    .rec-price__block-text {
+        font-size: 10px;
+        width: 170px;
+    }
+    .rec-new__slide-text {
+        margin-top: 20px;
+        width: 250px;
+        height: 127px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 30px;
+        letter-spacing: .01em;
+        text-transform: uppercase;
+        color: #fff;
+    }
+    .rec-new__slide-container {
+        width: 340px;
+    }
+    .rec-about__block-add {
+        width: 75%;
+    }
+    .rec-about__block-title {
+        width: 83%;
+    }
+    .rec-about__block-text {
+        margin-top: 32px;
+        width: 350px;
+    }
+    .rec-about__block-title {
+        margin-top: 54px;
+        height: 110px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 25px;
+        line-height: 44px;
+    }
+    .rec-about__block-add::before {
+        width: 45%;
+    }
+    .rec-price__block-key {
+        height: 29px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+    }
+    .rec-price__text-title {
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .rec-work__text-title {
+        margin-top: 53px;
+        width: 360px;
+    }
+    .rec-skills__block-container {
+        padding: 0 28px 60px 28px;
+    }
+    .rec-skill__tab-form {
+        height: 760px;
+    }
+}
+@media (max-width: 400px) {
+    .rec-start__text-add::before {
+        display: none;
+    }
+    .rec-start__text-title {
+        width: 330px;
+        height: 90px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 39px;
+        letter-spacing: .12em;
+        text-transform: uppercase;
+        color: #000;
+        margin-top: 54px;
+    }
+    .rec-work__text-add::before {
+        display: none;
+    }
+    .rec-work__text-info {
+        margin-top: 42px;
+        width: 320px;
+        height: 48px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        color: #535353;
+    }
+    .rec-work__text-title {
+        width: 330px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 23px;
+        line-height: 47px;
+        letter-spacing: .12em;
+        text-transform: uppercase;
+        color: #000;
+    }
+    .rec-work__text-item {
+        width: 315px;
+        height: 145px;
+    }
+    .rec-price__block-price-media {
+        font-size: 16px;
+    }
+    .rec-price__block-add-media {
+        font-size: 11px;
+    }
+    .rec-about__block-people {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .rec-about__block-people-block {
+        margin-left: 0;
+        margin-top: 30px;
+    }
+    .rec-new__slide-container {
+        width: 315px;
+    }
+    .rec-start__text-item {
+        margin-top: 48px;
+        width: 325px;
+        font-family: Circe;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 26px;
+        color: #535353;
+    }
+    .rec-about__block-text {
+        margin-top: 32px;
+        width: 320px;
     }
 }
