--- a/#src/scss/rec/skills.scss
+++ b/#src/scss/rec/skills.scss
@@ -14,6 +14,16 @@
     &__content {
         z-index: 10;
     }
+    &__media {
+        display: none;
+        &-container {
+            width: 100%;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
     &__text {
         max-width: 1440px;
         margin:  0 auto;
