--- a/#src/scss/smm/price.scss
+++ b/#src/scss/smm/price.scss
@@ -68,6 +68,13 @@
             align-items: center;
             justify-content: center;
         }
+        &-media {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            display: none;
+        }
         &-item {
             width: 100%;
             height: 436px;
@@ -141,6 +148,17 @@
             text-transform: uppercase;
             color: #DC4139;
             margin-top: 50px;
+            &-media {
+                font-family: Circe;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 30px;
+                line-height: 47px;
+                letter-spacing: 0.12em;
+                text-transform: uppercase;
+                color: #DC4139;
+                margin-top: 50px;
+            }
         }
         &-add {
             font-family: Circe;
@@ -150,6 +168,15 @@
             line-height: 29px;
             letter-spacing: 0.01em;
             color: #9C9C9C;
+            &-media {
+                font-family: Circe;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 20px;
+                line-height: 29px;
+                letter-spacing: 0.01em;
+                color: #9C9C9C;
+            }
         }
     }
 
